--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,30 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
+# Don't check auto-generated stuff into git
+coverage
+build
+node_modules
+stats.json
+.pnp
 .pnp.js
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
+# Misc
 .DS_Store
-.env.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+.env
 .env.development.local
 .env.test.local
 .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Boilerplate internals
+generated-cra-app
+.cra-template-rb
+template
+
+# Temporary env files
+/public/env-config.js
+env-config.js
+
+# Log files
+*.log
