--- a/package.json
+++ b/package.json
@@ -1,27 +1,57 @@
 {
-  "name": "copy",
+  "name": "basic-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.6.0",
+    "@ant-design/icons": "4.2.2",
+    "@reduxjs/toolkit": "^1.4.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.7.3",
+    "axios": "^0.21.0",
+    "cross-env": "^7.0.2",
+    "eslint-config-prettier": "^6.14.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.2",
+    "lodash": "4.17.20",
+    "moment": "2.29.1",
+    "prettier": "^2.1.2",
     "react": "^17.0.1",
+    "react-app-polyfill": "^2.0.0",
+    "react-beautiful-dnd": "13.0.0",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "react-facebook-login": "4.1.1",
+    "react-google-login": "5.1.22",
+    "react-helmet-async": "1.0.7",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.0",
+    "react-select": "^3.1.0",
+    "redux-injectors": "^1.3.0",
+    "redux-saga": "^1.1.3",
+    "react-i18next": "11.3.4",
+    "reselect": "^4.0.0",
+    "sanitize.css": "^12.0.1",
+    "serve": "^11.3.2",
+    "styled-components": "^5.2.0",
+    "stylelint": "^13.7.2",
+    "stylelint-config-recommended": "^3.0.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.10.0",
+    "i18next": "19.3.4",
+    "i18next-browser-languagedetector": "4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "eslint": "eslint --ext js,jsx",
+    "lint": "yarn eslint -- src",
+    "lint:fix": "yarn eslint -- --fix src",
+    "lint:css": "stylelint src/**/*.css",
+    "prettify": "prettier --write",
+    "extract-lang": "i18next-scanner --config ./internals/scripts/i18next-scanner.config.js"
   },
   "browserslist": {
     "production": [
@@ -34,5 +64,27 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "npm": ">=6.4.1",
+    "node": ">=10.13.0"
+  },
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "npm run eslint -- --fix"
+    ],
+    "*.{md,json}": [
+      "prettier --write"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "devDependencies": {
+    "babel-plugin-react-intl": "8.2.3",
+    "copy-webpack-plugin": "6.3.0",
+    "i18next-scanner": "2.11.0"
   }
 }
