--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "4.2.2",
+    "@fortawesome/fontawesome-svg-core": "1.2.34",
+    "@fortawesome/free-brands-svg-icons": "5.15.2",
+    "@fortawesome/free-regular-svg-icons": "5.15.2",
+    "@fortawesome/free-solid-svg-icons": "5.15.2",
+    "@fortawesome/react-fontawesome": "0.1.14",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -14,6 +19,8 @@
     "eslint-config-prettier": "^6.14.0",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.0",
+    "i18next": "19.3.4",
+    "i18next-browser-languagedetector": "4.0.2",
     "lint-staged": "^10.4.2",
     "lodash": "4.17.20",
     "moment": "2.29.1",
@@ -25,13 +32,13 @@
     "react-facebook-login": "4.1.1",
     "react-google-login": "5.1.22",
     "react-helmet-async": "1.0.7",
+    "react-i18next": "11.3.4",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-select": "^3.1.0",
     "redux-injectors": "^1.3.0",
     "redux-saga": "^1.1.3",
-    "react-i18next": "11.3.4",
     "reselect": "^4.0.0",
     "sanitize.css": "^12.0.1",
     "serve": "^11.3.2",
@@ -39,9 +46,7 @@
     "stylelint": "^13.7.2",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-processor-styled-components": "^1.10.0",
-    "i18next": "19.3.4",
-    "i18next-browser-languagedetector": "4.0.2"
+    "stylelint-processor-styled-components": "^1.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
