--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-google-login": "5.1.22",
     "react-helmet-async": "1.0.7",
     "react-i18next": "11.3.4",
+    "react-player": "2.7.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
