--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash": "4.17.20",
     "moment": "2.29.1",
     "prettier": "^2.1.2",
+    "query-string": "6.13.8",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
     "react-beautiful-dnd": "13.0.0",
