--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "antd": "^4.7.3",
     "axios": "^0.21.0",
     "cross-env": "^7.0.2",
+    "draft-js": "0.11.7",
+    "draftjs-to-html": "0.9.1",
     "eslint-config-prettier": "^6.14.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "html-to-draftjs": "1.5.0",
     "husky": "^4.3.0",
     "i18next": "19.3.4",
     "i18next-browser-languagedetector": "4.0.2",
@@ -30,6 +33,7 @@
     "react-app-polyfill": "^2.0.0",
     "react-beautiful-dnd": "13.0.0",
     "react-dom": "^17.0.1",
+    "react-draft-wysiwyg": "1.14.5",
     "react-facebook-login": "4.1.1",
     "react-google-login": "5.1.22",
     "react-helmet-async": "1.0.7",
